--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@openrouter/ai-sdk-provider": "^2.1.1",
     "@swc/core-android-arm64": "^1.3.11",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
