--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@openrouter/ai-sdk-provider": "^2.1.1",
+    "@openrouter/sdk": "^0.5.1",
     "@swc/core-android-arm64": "^1.3.11",
     "@tailwindcss/vite": "^4.1.18",
+    "ai": "^6.0.67",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
